#1286: decode appointment body smarter